<resources>
    <string name="app_name">志報新聞社</string>
    <string name="a">每期\n報章</string>
    <string name="b">訂閱\n會員</string>
    <string name="c">每日\n大小事</string>
    <string name="d">需要\n幫助?</string>
    <string name="e">志報新聞社</string>
    <string name="f">讓你最快接收到志報,\n訂閱會員等一系列操作</string>
    <string name="g">&gt;立即進入</string>
    <string name="h">歡迎使用志報新聞社</string>
    <string name="i">每期報章</string>
    <string name="j">獲取每期的報章</string>
    <string name="k">往期報章</string>
    <string name="l">最新報章</string>
    <string name="m">知道世界每日發生的大小事</string>
    <string name="n">每日大小事</string>
    <string name="o">訂閱會員可以搶先獲得報道,\n同時觀看黑白版和彩色版報\n道,還有更多優惠。</string>
    <string name="p">訂閱會員</string>
    <string name="q">按此訂閱會員</string>
    <string name="r">主頁</string>
    <string name="s">今日金句：我太南了</string>
    <string name="t">今日金句：奧利給！</string>
    <string name="u">今日金句：太成功啦！</string>
    <string name="v">今日金句：不要按偶</string>
    <string name="w">自毀程序將於三秒後啟動</string>
    <string name="x">剩餘時間：</string>
    <string name="y">自毀程序啟動</string>
    <string name="z">自毀程序啟動</string>
    <string name="aa">今日金句：耗子尾汁肋</string>
    <string name="ab">今日金句：功課做完未</string>
    <string name="TODO" translatable="false">T</string>
    <string name="ads_id" translatable="false">ca-app-pub-7217655381008919/8443448688</string>
    <string name="app_id" translatable="false">ca-app-pub-7217655381008919~9756530358</string>
    <string name="ac">糟糕了！發生問題！(╯︿╰)</string>
    <string name="ad">測試期已結束，切勿使用測試人員帳戶登入</string>
    <string name="ae">再按一次後退鍵退出程式</string>
    <string name="af">會員\n專區</string>
    <string name="ag">今日荃灣天氣及疫情報告</string>
    <string name="ai">您好!</string>
    <string name="aj">非正確二維碼</string>
    <string name="ak">我們使用此權限來掃描會員二維碼</string>
    <string name="al">已確認會員密碼</string>
    <string name="am">請你登入並重啟App</string>
    <string name="an">登入會員</string>
    <string name="ao">會員消息</string>
    <string name="ap">查看最新的會員消息，包括抽獎、\n活動、報章等等資訊。</string>
    <string name="aq">登入會員</string>
    <string name="ar">登入會員，獲取會員福利、特有\n功能，仲有好多東東</string>
    <string name="as">獲得抽獎、活動等資訊。\n還可以搶先獲得報道！</string>
    <string name="at">會員專區</string>
    <string name="au">會員消息</string>
    <string name="av">登出</string>
    <string name="aw">防止你出門變落湯雞兼中招</string>
    <string name="ax">天氣及疫情報告</string>
    <string name="ay">動畫圖表</string>
    <string name="az">刷新</string>
    <string name="ba">掃描會員二維碼</string>
    <string name="bb">會員密碼</string>
    <string name="bc">圖表</string>
    <string name="bd">加載中…</string>
    <string name="be">確診</string>
    <string name="bf">歷史每日新增確診</string>
    <string name="bg">點擊過快,加載失敗</string>
    <string name="bi">今月每日新增確診</string>
    <string name="bj">出院</string>
    <string name="bk">歷史每日累計確診死亡出院</string>
    <string name="bl">死亡</string>
    <string name="香港疫情最新情況">香港疫情最新情況</string>
    <string name="新增確診">新增確診:</string>
    <string name="累計確診">累計確診:</string>
    <string name="累計死亡">累計死亡:</string>
    <string name="累計出院">累計出院:</string>
    <string name="濕度">濕度:</string>
    <string name="一小時平均降雨量">一小時平均降雨量:</string>
    <string name="username">匿名</string>
    <string name="ca">向客服查詢問題…或聊天🤔</string>
    <string name="bm">似乎正在加載信息或還沒有訊息…</string>
    <string name="bn">圖表</string>
    <string name="bo">資訊\n報商:%s\n版號:%s\n日期:%s</string>
    <string name="bp">資訊\n報商:%s\n日期:%s</string>
    <string name="bq">會員搶先看</string>
    <string name="dow">下載完成!!!</string>
</resources>
