<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout"
    tools:context=".VipArea">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:elevation="5dp"
        android:gravity="center"
        android:shadowColor="@color/shadow"
        android:shadowDx="0"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:text="@string/as"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/half_parent_width"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:gravity="center"
        android:shadowColor="@color/shadow"
        android:shadowDx="0"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:text="@string/at"
        android:textColor="@color/text"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/newsvip_buttonxml" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/au"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView22"
        app:layout_constraintEnd_toEndOf="@+id/imageView22"
        app:layout_constraintStart_toStartOf="@+id/imageView22"
        app:layout_constraintTop_toTopOf="@+id/imageView22"
        app:layout_constraintVertical_bias="0.4" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/newsvip_buttonxml"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/av"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView23"
        app:layout_constraintEnd_toEndOf="@+id/imageView23"
        app:layout_constraintStart_toStartOf="@+id/imageView23"
        app:layout_constraintTop_toTopOf="@+id/imageView23"
        app:layout_constraintVertical_bias="0.4" />

    <fragment
        android:name="com.chinews.xdapp.Bottom"
        android:layout_width="match_parent"
        class="com.chinews.xdapp.Bottom"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout="@layout/fragment_buttom"
        android:id="@+id/f"
        tools:ignore="FragmentTagUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>